[package]
name = "zKitap2Pdf"
version = "0.1.2"
edition = "2024"
description = "zKitap2pdf is a tool for converting Fernus Z-kitap e-books from exe to pdf format using ruffle"
authors = ["vrdons <vrdons@proton.me>", "ErenayDev <erenaydev@proton.me>"]
license = "MIT"
repository = "https://github.com/vrdons/zKitap2Pdf"
homepage = "https://github.com/vrdons/zKitap2Pdf"
readme = "README.md"
keywords = ["zKitap", "sfw", "flash", "ruffle", "zKitap2Pdf"]
rust-version = "1.87"
exclude = [
    "target/",
    ".git/",
    ".github/",
    "tools/",
    "*.log",
    "debug/",
    "*.pdf",
    "in/"
]

[dependencies]
anyhow = "1.0.100"
clap = { version ="4.5.53", features = ["derive"] }
image = { version = "0.25.9", features=["png", "jpeg"] }
notify = "8.2.0"
walkdir = "2.5.0"
swf = { git = "https://github.com/ruffle-rs/ruffle.git", package="swf", rev = "5939da66c31f012158fbd29c612302e6742753c8" }
ruffle_core = { git = "https://github.com/ruffle-rs/ruffle.git", package="ruffle_core", features = ["deterministic", "default_font"], rev = "5939da66c31f012158fbd29c612302e6742753c8" }
ruffle_render_wgpu = { git = "https://github.com/ruffle-rs/ruffle.git", package="ruffle_render_wgpu", features = ["clap"], rev = "5939da66c31f012158fbd29c612302e6742753c8" }
futures = "0.3.31"
oxidize-pdf = "1.6.6"
tempfile = "3.23.0"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }-{ version }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/zKitap2Pdf", dest = "/usr/bin/zKitap2Pdf", mode = "755" },
]
summary = "Convert Fernus Z-kitap e-books EXE's to PDF"
description = """
zKitap2Pdf is a tool for converting Fernus Z-kitap e-books from exe to pdf format. Using ruffle
"""
license = "MIT"

[package.metadata.deb]
maintainer = "ErenayDev <erenaydev@proton.me>"
copyright = "2025, ErenayDev <erenaydev@proton.me>"
extended-description = """
zKitap2Pdf is a tool for converting Fernus Z-kitap e-books from exe to pdf format using ruffle
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/zKitap2Pdf", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/zKitap2Pdf/", "644"],
]
